umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_chemdoodle_larger.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 42
bond_count: 47
sum_formula: C32N7O3
graph6: "i?C???????@@?A?A?@??GD?CO????G??HE???_?????_??@???_???O????[???G???C?????W???O????G?????_?????_????Ao??????G???@?S????_?????_?_???@GO??????_????G"
