umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_chemdoodle_strychnine.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 47
bond_count: 53
sum_formula: C21H22N2O2
graph6: n??XOG@?gO@?GA_O?C@?@C@??@A_?G?@??C?_??O??O???C???B@????O???A????G????O????_????O????G?????_????C?????G?????C?????C??????_?????G??????O??????_??????_??????_??????G??????@???????C????
