umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_corina_8f.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 81
bond_count: 86
sum_formula: C33H44N2O2
graph6: "~?@PhEGHCA?G?_@?@?G`???@??C??O??G??C??@???G???_??@???HG???????G???@????C????G???AK?????????@?????G?????_????@?????P_?????G?????A??????C??????O??????O??????G??????A???????O??????A???????A???????A???????@????????O???????A????????@????????C????????C????????C????????@?????????O?????????_????????A?????????A?????????A??????????_?????????G??????????_?????????A??????????@??????????@???????????O??????????C???????????O??????????@???????????@???????????@????????????O???????????C????????????G????????????O????????????O????????????G????????????A???????"
